# jem

./: .doctr-files  .flake8  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  genindex.html  github_deploy_key_inatilab_jem_python.enc  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  release-history.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.github/workflows/: python-publish.yml
_modules/: index.html
_modules/jem/: features.html  filters.html
_static/: documentation_options.js
api/: features.html  filters.html  index.html
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: conf.py  index.rst
docs/source/api/: features.rst  filters.rst
jem/: _version.py  cli.py  features.py  filters.py  logging.py  signal_stats.py  simulation.py
old-method/: .gitattributes  .travis.yml  MANIFEST.in  README.rst  github_deploy_key_inatilab_jem.enc  requirements-dev.txt
old-method/docs/source/: index.rst  release-history.rst
old-method/docs/source/api/: index.rst
source/: conf.py  installation.rst  usage.rst
src/jem/: filters.py  utils.py
